# classicmagedps

./: .gitignore  .replit  README.md  pyproject.toml
classicmagedps/: __init__.py  cooldown.py  env.py  fire_mage.py  frost_mage.py  mage.py  simulation.py  utils.py
examples/: cooldowns.py  example1.py  frost.py  simulation.py  single_iteration.py  single_iteration_fire.py  single_iteration_frost.py  t2test.py  t2testfrost.py
