[tool.poetry]
name = "classicmagedps"
version = "0.3.0"
description = ""
authors = ["mcdallas <mcdallas@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
simpy = "^4.0.1"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
